--- a/html/index.html
+++ b/html/index.html
@@ -5,6 +5,8 @@
         <title> My first website </title>
     </head>    
     <body>
+        <h1> Please Fill Your Info</h1>
+
         <form action="action_page.php" method="POST">
             <div>
                 <label for="fname">first name:</label>
@@ -90,11 +92,7 @@
                 <input type="Submit">
             </div>
         </form>
-        <h1> I like pizza</h1>
-        <h2> I like pizza</h2>
-        <h3> I like pizza</h3>
-        <h4> I like pizza</h4>
-        <h5> I like pizza</h5>
+
 
     </body>
 </html>
