--- a/css/index.html
+++ b/css/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div id="box1"> Hi </div>
+    <div id="box1"> Hello </div>
+    <div id="box2"> World </div>
 </body>
 </html>
